# 2nd_Paper_Code_Template

./: CMakeLists.txt  main.cpp  modelo.h
